Name:                   test-utils
Category:               Test, Testing
Version:                0.0.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Pre-alpha
Synopsis:               Testing utility library
Homepage:               https://github.com/emc2/enumeration
Bug-Reports:            https://github.com/emc2/enumeration/issues
Copyright:              Copyright (c) 2014 Eric McCorkle.  All rights reserved.
Description:
  A toolbox library of useful code for writing tests.  Portions of
  this library use the HUnit-Plus testing framework.
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:emc2/test-utils.git

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, containers,
                        HUnit-Plus, arith-encode
  exposed-modules:      Test.Utils.Combinatorial
                        Test.Utils.Enumeration
